<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.budiyev.android.codescanner.CodeScannerView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/scanner_view"
        app:autoFocusButtonVisible="true"
        app:autoFocusButtonColor="@android:color/white"
        app:flashButtonColor="@color/white"
        app:flashButtonVisible="true">

    </com.budiyev.android.codescanner.CodeScannerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        android:text="@string/scan_something"
        android:id="@+id/show_text_view">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_recycle_view_db_data"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/from_db"
        app:layout_constraintTop_toBottomOf="@+id/show_text_view">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/sign_out_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:text="@string/sign_out" />

</androidx.constraintlayout.widget.ConstraintLayout>